# skatos

./: Cargo.toml  README.md  demo.tape  install.sh
src/: colors.rs  env_gen.rs  main.rs  skate.rs  storage.rs
