[package]
name = "skatos"
version = "0.1.0"
edition = "2021"
authors = ["saravenpi"]
description = "Generate environment files from skate variables"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
