[package]
name = "skatos"
version = "0.1.0"
edition = "2021"
authors = ["saravenpi"]
description = "Generate environment files from skate variables"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
dirs = "5.0"
